# flickr2html

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  download.rs  exif.rs  index.rs  main.rs  model.rs  render.rs  thumbs.rs
src/assets/: app.js  style.css
